* Minor update: (201215)
- don't run 'stop' operations when upgrading package.
- ensure QTS 4.5.1 correctly enables package icon in App Center.

* Minor update: (201119)
- ensure symlink to /dev/fd is created so stderr can be captured separately from stdout.

* Minor update: (201106)
- a few wording and formatting changes for accuracy, and to keep ShellCheck happy.
- include a link to logfile in [/var/log/]

* Minor update: (201104)
- downgrade logged warning when sorting QPKG order,
- include 'start' and 'stop' operations in logs.

* Minor update: (201101)
- improve log format.

* Minor update: (201029)
- add support for SysV-style init scripts. Thank you @mickroll for this great suggestion!

* Minor update: (190106)
- tidy-up a few logged and interactive display messages.

* Initial release: (190101)
- first public script release.