@@ -1,5 +1,5 @@
 QPKG_NAME="RunLast"
-QPKG_VER="201215"
+QPKG_VER="201220"
 QPKG_AUTHOR="OneCD"
 QPKG_SUMMARY="Run custom shell-scripts after QPKG re-integration"
 QPKG_RC_NUM="999"
