@@ -1,3 +1,7 @@
+* Minor update: (201220)
+- don't run 'stop' operations when upgrading package (fixed).
+- use better rendering for base package icon.
+
 * Minor update: (201215)
 - don't run 'stop' operations when upgrading package.
 - ensure QTS 4.5.1 correctly enables package icon in App Center.
